# NCERT_Study_Tool

./: .gitignore  package.json  pnpm-lock.yaml  ui-development-prompt.md
app/: globals.css  layout.tsx  page.tsx
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py  schemas.py
backend/app/api/: router.py
backend/app/api/v1/: health.py  study.py
backend/app/core/: config.py  container.py  deps.py  utils.py
backend/app/scripts/: ingest_ncert.py
backend/app/services/: catalog.py  concept_extractor.py  context_compressor.py  diversity_selector.py  educational_classifier.py  educational_models.py  embedding_pipeline.py  hybrid_chunker.py  hybrid_retriever.py  ingest.py  ingestion_pipeline.py  intent_router.py  learning_objective_extractor.py  llm.py  metadata_builder.py  metadata_filters.py  misconception_detector.py  parser.py  query_transformer.py  rag.py  reranker.py  retrieval_models.py  retrieval_pipeline.py  vectorstore.py
backend/tests/: __init__.py  test_educational_ingestion_pipeline.py  test_rag_quiz.py  test_retrieval_pipeline.py
components/: chat-tab.tsx  dashboard.tsx  flashcards-tab.tsx  header.tsx  qa-tab.tsx  quiz-tab.tsx  sidebar.tsx
lib/: backend.ts
